--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -360,7 +360,8 @@ The dominance of the location tests was preserved even under a multivariate heav
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{"art/file8"}
-		\caption{\textbf{Scale Change--} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effects are a scale change.}  
+		\caption{\textbf{Scale Change.} 
+			$\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effects are a scale change.}  
 		\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
