--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1443,3 +1443,12 @@ Contact: tongt@hkbu.edu.hk},
 	year={1995},
 	publisher={IEEE}
 }
+
+@article{bai1996effect,
+	title={Effect of high dimension: by an example of a two sample problem},
+	author={Bai, Zhidong and Saranadasa, Hewa},
+	journal={Statistica Sinica},
+	pages={311--329},
+	year={1996},
+	publisher={JSTOR}
+}
