--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -36,8 +36,8 @@
 \newcommand{\set}[1]{\{ #1 \}} % A set
 \newcommand{\indicator}[1]{\mathcal{I}{\set{#1}}} % The indicator function.
 \newcommand{\reals}{\mathbb{R}} % the set of real numbers
-\newcommand{\featureS}{\mathcal{X}} % The feature space
-\newcommand{\outcomeS}{\mathcal{Y}} % The feature space
+\newcommand{\xS}{\mathcal{X}} % The feature space
+\newcommand{\yS}{\mathcal{Y}} % The feature space
 \newcommand{\expect}[1]{\mathbf{E}\left[ #1 \right]} % The expectation operator
 \newcommand{\acc}{\mathcal{E}} 
 \newcommand{\accEstim}{\hat{\mathcal{E}}} 
