--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -27,33 +27,34 @@ For the cases that the purposes of the analysis is not the mere existence of a d
 \section{Introduction}
 \label{sec:introduction}
 
-A common workflow in neuroimaging consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
+A common workflow in neuroimaging and genetics consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
 Examples in the neuroscientific literature include \citet{golland_permutation_2003,pereira_machine_2009,varoquaux_assessing_2016}, and especially the recently popularized \emph{multivariate pattern analysis} (MVPA) framework of \citet{kriegeskorte_information-based_2006}.
-This practice is also observed in some high profile publications in the genetics literature: 
+For examples in the genetics literature see for example
 \citet{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008}.
 
 
 To fix ideas, we will adhere to a concrete example.
 In \cite{gilron_quantifying_2016}, the authors seek to detect brain regions which encode differences between vocal and non-vocal stimuli. 
-Following the MVPA workflow, the localization problem is cast as a supervised learning problem: if the type of the stimulus can be predicted from the spatial activation pattern significantly better than chance, then a region is declared to encode vocal/non-vocal information. 
-We call this an \emph{accuracy test}, because it uses the prediction accuracy as a test statistic \footnote{Known as \emph{class prediction}, or \emph{pattern discrimination}.}. 
+Following the MVPA workflow, the localization problem is cast as a supervised learning problem: if the type of the stimulus can be predicted from the brain's activation pattern significantly better than chance, then a region is declared to encode vocal/non-vocal information. 
+We call this an \emph{accuracy test}, because it uses the prediction accuracy as a test statistic. 
 
-This same signal detection task can be also approached as a two-group multivariate test.
+This same signal detection task can be also approached as a multivariate test.
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
 As put in \cite{pereira_machine_2009}: 
 \begin{quote}
 ... the problem of deciding whether the classifier learned to discriminate the classes can be subsumed into the more general question as to whether there is evidence that the underlying distributions of each class are equal or not.
 \end{quote}
 A practitioner may thus approach the signal detection problem with a two-group location test such as Hotelling's $T^2$ \citep{anderson_introduction_2003}.
-Alternatively, if the size of brain region of interest is large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005}, \cite{goeman2006testing}, or \cite{srivastava_multivariate_2007} .
-For brevity, and in contrast to \emph{accuracy tests}, we will call these \emph{location tests\footnote{Known as \emph{class comparisons}.}}, because they test for the equality of location of a multivariate distribution. 
+Alternatively, if the size of the brain's region of interest is large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon.
+Examples of high dimensional multivariate tests include \cite{schafer_shrinkage_2005}, \cite{goeman2006testing}, or \cite{srivastava_multivariate_2007} .
+For brevity, and in contrast to \emph{accuracy tests}, we will call these \emph{location tests}, because they test for the equality of location of a multivariate distribution. 
 
 
 At this point, it becomes unclear which is preferable: a location test or an accuracy test?
 The former with a heritage dating back to \cite{hotelling_generalization_1931}, and the latter being extremely popular, as the $1,170$ citations\footnote{GoogleScholar. Accessed Aug 2017.} of \cite{kriegeskorte_information-based_2006} suggest. 
 
-The comparison between location and accuracy tests was precisely the goal of \cite{ramdas_classification_2016}, who compared Hotelling's $T^2$ location test to accuracy tests using \emph{Fisher's linear discriminant analysis} classifier (LDA). 
+The comparison between location and accuracy tests was precisely the goal of \cite{ramdas_classification_2016}, who compared Hotelling's $T^2$ location test to \emph{Fisher's linear discriminant analysis} (LDA) accuracy test. 
 By comparing the rates of convergence of the power of each statistic to $1$, \cite{ramdas_classification_2016} concluded that accuracy and location tests are rate equivalent. 
 Rates, however, are only a first stage when comparing test statistics. 
 
@@ -107,23 +108,38 @@ A discussion follows.
 
 \subsection{Multivariate Testing}
 
-Let $y \in y$ be a class encoding. 
-Let $x \in x$ be a $p$ dimensional feature vector. 
-In our vocal/non-vocal example we have $y=\set{0,1}$ and $p$, the number of voxels in a brain region so that $x=\reals^{27}$. 
+Let $y \in \mathcal{Y}$ be a class encoding. 
+Let $x \in \mathcal{X}$ be a $p$ dimensional feature vector. 
+In our vocal/non-vocal example we have $\mathcal{Y}=\set{0,1}$ and $p$, the number of voxels in a brain region so that $\mathcal{X}=\reals^{27}$. 
 
-Given $n$ pairs of $(x_i,y_i)$, typically assumed i.i.d., a multivariate test amounts to testing whether $x|y=1$ has the the same distribution as $x|y=0$. 
+Denoting a dataset by $\data:=\{(x_i,y_i)\}_{i=1}^n$, a multivariate test amounts to testing whether the distribution of $x$ given $y=1$ is the same as $x$ given $y=0$. 
 I.e., we test if the multivariate voxel activation pattern has the same distribution when given a vocal stimulus, as when given a non-vocal stimulus. 
 The comparison metric between statistics is their power, i.e., the probability to infer that $x|y=1$ is not distributed like $x|y=0$.
 
 
+\subsection{Location Tests and Hotelling's $T^2$}
+The most prevalent interpretation of ``$x|y=1$ is not distributed like $x|y=0$'' is to assume they differ in means. 
+In his seminal work, \citet{hotelling_generalization_1931} has proposed the $T^2$ test statistic for testing the equality in means of two multivariate distributions. 
+Using our notations this statistic is proportional to the difference between group means, measured with the Mahalanobis norm: 
+\begin{align}
+	T^2 \propto \; (\bar{x}_{y=1}-\bar{x}_{y=0})'\; \hat{\Sigma}^{-1} \;(\bar{x}_{y=1}-\bar{x}_{y=0}), 
+\end{align}
+where $\bar{x}_{y=j}$ is the $p$-vector of means in the $y=j$ group, and $\hat{\Sigma}$ is a pooled covariance estimator.
+Perhaps more intuitively, it can be shown that $T^2$ equals the Euclidean norm of the mean difference vector, after decorrelating the coordinates of $x$. 
+For more background see, for example, \cite{anderson_introduction_2003}.
+
+The major difficulty with these multivariate tests is that $\Sigma$ has $p(p+1)/2$ free parameters, so that $n$ has to be very large to apply these tests.
+If $n$ is not much larger than $p$, or in low signal-to-noise regimes, the test is very low powered, as argued by \cite{bai1996effect}. 
+In these cases, high dimensional versions of the $T^2$ may be applied, which essentially regularize the estimator of $\Sigma$, thus reducing the dimensionality of the problem and improving the SNR.
+
 
 
 \subsection{Prediction Accuracy as a Test Statistic}
-An accuracy test amounts to setting a test statistic $\statistic$, to be some measure prediction accuracy.  
+An accuracy test amounts to setting a test statistic to be some measure prediction accuracy.  
 
-Denoting a dataset by $\data:=\{x_i,y_i\}_{i=1}^n$, a predictor\footnote{Known as a \emph{hypothesis} in the machine learning literature.}, $\hyp:x \to y$, is the output of a learning algorithm $\algo$ when applied to the dataset $\data$. 
-The accuracy of predictor\footnote{Known as the complement of the \emph{test error} in \cite{hastie_elements_2003}}, $\acc_{\hyp}$, is defined as the probability of $\hyp$ making a correct prediction. 
-The accuracy of an algorithm\footnote{Known as the complement of the \emph{expected test error} in \cite{hastie_elements_2003}}, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
+A predictor\footnote{Known as a \emph{hypothesis} in the machine learning literature.}, $\hyp:\mathcal{X} \to \mathcal{Y}$, is the output of a learning algorithm $\algo$ when applied to the dataset $\data$. 
+The accuracy of predictor\footnote{Known as (the complement of) the \emph{test error} in \cite{hastie_elements_2003}}, $\acc_{\hyp}$, is defined as the probability of $\hyp$ making a correct prediction. 
+The accuracy of an algorithm\footnote{Known as (the complement of) the \emph{expected test error} in \cite{hastie_elements_2003}}, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
 Formalizing, we denote by $\measure$ the probability measure of $(x, y)$, and by $\measuren$ the joint probability measure of the sample $\data$. 
 We can then write 
 \begin{align}
@@ -133,7 +149,7 @@ and
 \begin{align}
 	\acc_{\algo}:=\int_\data \acc_{\algo_\data} \; d\measuren,
 \end{align}
-where $\indicator{A}$ is the indicator function of event $A$. 
+where $\indicator{A}$ is the indicator function of the set $A$. 
 
 Denoting an estimate of $\acc_{\hyp}$ by $\accEstim_{\hyp}$, and $\acc_{\algo}$ by $\accEstim_{\algo}$, a statistically significant ``better than chance'' estimate of either, is evidence that the classes are distinct. 
 
@@ -160,17 +176,12 @@ where $|A|$ denotes the cardinality of a set $A$.
 
 
 
-\subsection{A Battery of Candidate Tests}
+\subsection{How to Estimate Accuracies?}
 \label{sec:considerations}
 
-The design of a permutation test using $\accEstim_{\algo}$ requires the following design choices: 
-\begin{enumerate}
-\item How to estimate $\accEstim_{\algo}$? In particular, should it be resampled and how? 
-\item If resampling using V-fold cross validation: 
-How many folds? 
-Should the data be refolded after each permutation? 
-Should the folding be balanced? 
-\end{enumerate}
+Estimating $\accEstim_{\algo}$ requires the following design choices: 
+(a) Should it be resampled and how? 
+(b) If resampling using V-fold cross validation then How many folds? Should the data be refolded after each permutation? Should the folding be balanced? 
 
 We will now address these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of $\acc_{\algo}$, but rather in the detection of its departure from chance level. 
 
@@ -181,19 +192,21 @@ We will thus be considering both cross validated accuracies, and resubstitution 
 
 
 \paragraph{Balanced folding?}
-The standard practice when V-fold cross validating is to constrain the data folds to be balanced, i.e. stratified \citep[e.g.][]{ojala_permutation_2010}.
+The standard practice in V-fold CV is to constrain the data folds to be balanced, i.e. stratified \citep[e.g.][]{ojala_permutation_2010}.
 This means that each fold has the same number of examples from each class. 
 We will report results with both balanced and unbalanced data foldings. 
 
 
 \paragraph{Refolding?}
 The standard practice in neuroimaging is to permute labels and refold the data after each permutation, so that the balance of the classes in each fold is preserved.
-We will adhere to this practice due to its popularity, even though it can be avoided by permuting features instead of labels, as done by \citet{golland_permutation_2005}.
+We will adhere to this practice due to its popularity, even though it is more computaionally efficient to permute features instead of labels, as done by \citet{golland_permutation_2005}.
 
 
 \paragraph{How many folds?}
 Different authors suggest different rules for the number of folds. 
 We will look into the effect of the number of folds. 
+
+\bigskip
 
 Table~\ref{tab:collected} collects an initial battery of tests we will be comparing. 
 \begin{tcolorbox}
@@ -252,13 +265,18 @@ We do so via simulation, which details are now described.
 
 
 \subsection{Simulation Details}
-\label{apx:simulation_details}
+\label{sec:simulation_details}
 
 The following details are common to all the reported simulations, unless stated otherwise in a figure's caption. 
 The \R code for the simulations can be found in \url{http://www.john-ros.com/permuting_accuracy/}.
 
 Each simulation is based on $1,000$ replications. 
-In each replication, we generate $n$ i.i.d. samples from a shift class $\x_i = \mu \y^*_i + \eta_i$, where $y^*_i=\set{0,1}$ encodes the class of subject $i$, the noise is distributed as $\eta_i \sim \gaussp{p}{0,\Sigma}$, the sample size $n=40$, and the dimension of the data is $p=23$. 
+In each replication, we generate $n$ i.i.d. samples from a shift class 
+\begin{align}
+\label{eq:distribution}
+	\x_i = \mu \y^*_i + \eta_i,
+\end{align}
+where $\y^*_i=\set{0,1}$ encodes the class of subject $i$, the noise is distributed as $\eta_i \sim \gaussp{p}{0,\Sigma}$, the sample size $n=40$, and the dimension of the data is $p=23$. 
 The covariance $\Sigma=I$. 
 Effects, i.e. shifts $\mu$, are equal equal in all $p$ coordinates, and vary over $\mu \in \set{0,1/4,1/2}$.
 
@@ -306,7 +324,7 @@ This is particularly visible for intermediate signal strength (green triangle), 
 		The various statistics on the $y$ axis. 
 		Their details are given in Table~\ref{tab:collected}. 
 		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
-		Simulation details in Section~\ref{apx:simulation_details}.
+		Simulation details in Section~\ref{sec:simulation_details}.
 		Cross-validation was performed with balanced and unbalanced data folding. See sub-captions.}	
 	\label{fig:simulation_1}
 	\begin{subfigure}{.5\textwidth}
@@ -361,7 +379,7 @@ The dominance of the location tests was preserved even under a multivariate heav
 		\centering
 		\includegraphics[width=1\linewidth]{"art/file8"}
 		\caption{\textbf{Scale Change.} 
-			$\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effects are a scale change.}  
+			$Var[\x_i|y_i=0] = I; Var[\x_i|y_i=1] = \Sigma$ where $\Sigma$ is diagonal with $\Sigma_{jj}=exp((j-p/2)/4*effect)$.}  
 		\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
@@ -377,6 +395,13 @@ The dominance of the location tests was preserved even under a multivariate heav
 
 
 \subsection{Dependence}
+We now test the robustness of our results to the correlation within sample. 
+in terms of Eq.(\ref{eq:distribution}) it means we change $\Sigma$. 
+Intuitively- both location tests and accuracy tests require some estimation of $\Sigma$, so that correlations are accounted for. 
+The question remains- which test does it better. 
+We address this matter in two setups. 
+A ``short range'' dependence, for which we use an $AR(1)$ covariance, and a ``long range'' dependence, for which we use the Brownian motion covariance. 
+
 
 \begin{figure}[h]
 	\centering
@@ -389,8 +414,8 @@ The dominance of the location tests was preserved even under a multivariate heav
 	\end{subfigure}
 	\begin{subfigure}{.4\textwidth}
 		\centering
-		%	  \includegraphics[width=1\linewidth]{"art/file10"}
-		\caption{Long-memory Brownian motion dependence: $\Sigma_{k,l}=\rho \min\{k,l\}; \rho=0.8$. .} 
+		  \includegraphics[width=1\linewidth]{"art/file16"}
+		\caption{Long-memory Brownian motion dependence: $\Sigma_{k,l}=\rho \min\{k,l\}; \rho=0.2$.} 
 		\label{fig:pink_noise}
 	\end{subfigure}
 \end{figure}
@@ -398,6 +423,84 @@ The dominance of the location tests was preserved even under a multivariate heav
 
 
 
+
+\subsection{Resampling with Replacement}
+\label{sec:bootstrap}
+
+Intuition suggests we may alleviate the discretization by cross-validating with replacement, instead of the V-fold CV.
+The discreteness of the accuracy statistic is governed by the number of examples in the union of holdout test sets.
+For V-fold CV, for instance, the accuracy may assume as many values as the sample size. 
+This suggests that the accuracy can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
+An algorithm that samples test sets with replacement is the \emph{leave-one-out bootstrap estimator},  and its derivatives, such as the \emph{0.632 bootstrap}, and \emph{0.632+ bootstrap} \citep[Sec 7.11]{hastie_elements_2003}.
+\begin{definition}[bLOO]
+	\label{def:bloo}
+	The \emph{leave-one-out bootstrap} estimate, bLOO, is the average accuracy of the holdout observations, over all bootstrap samples. 
+	Denote by $\data^b$, a bootstrap sample $b$ of size $n$, sampled with replacement from $\data$. 
+	Also denote by $C^{(i)}$ the index set of bootstrap samples not containing observation $i$.
+	The leave-one-out bootstrap estimate, $\accEstim_{\algo}^{bLOO}$,  is defined as:
+	\begin{align}
+	\accEstim_{\algo}^{bLOO}:= \frac 1n \sum_{i=1}^{n} \frac{1}{|C^{(i)}|} \sum_{b \in C^{(i)}} \indicator{\hypFun{\data^b}{x_i}=y_i}.
+	\end{align}
+	An equivalent formulation, which stresses the Bootstrap nature of the algorithm is the following. 
+	Denoting by $S^{(b)}$ the indexes of observations that are \emph{not} in the bootstrap sample $b$ and are not empty, 
+	\begin{align}
+	\accEstim_{\algo}^{bLOO} = \frac 1B \sum_{b=1}^{B} \frac{1}{|S^{(b)}|} \sum_{i \in S^{(b)}} \indicator{\hypFun{\data^b}{x_i}=y_i}.
+	\end{align}
+\end{definition}
+
+\begin{definition}[b$0.632$]
+	\label{def:b0632}
+	The \emph{0.632 bootstrap} accuracy estimate, b$0.632$, is a weighted average of the resubstitution error and the bLOO.
+	Formally:
+	\begin{align}
+	\accEstim_{\algo}^{0.632} := 0.368 \; \accEstim_{\algo}^{Resub}  + 0.632 \; \accEstim_{\algo}^{bLOO}.
+	\end{align}
+\end{definition}
+Simulation results are reported in Figure~\ref{fig:bootstrap} with naming conventions in Table~\ref{tab:collected_2}.
+It can be seen that selecting test sets with replacement does increase the power of accuracy tests, when compared to V-fold cross validation, but still falls short from the power of location tests. 
+It can also be seen that power increases with the number of bootstrap replications, as was to be expected, since more replications reduce the level of discretization.
+The type of bootstrap, bLOO versus b$0.632$, does not change the power. 
+
+\bigskip
+
+%TODO: change cost in simulation to 0.1
+\begin{tcolorbox}
+	\centering
+	\begin{tabular}{l|c|c|c|c|c}
+		Name & Algorithm & Resampling & B & Z-scored & Parameters\\ 
+		\hline
+		\hline
+		LDA.Boot.1 & LDA & b$0.632$ & $10$ & FALSE &  -- \\ 
+		LDA.Boot.2 & LDA & bLOO 	& $10$ & FALSE &  -- \\ 
+		SVM.Boot.1 & SVM & b$0.632$ & $10$ & FALSE & cost=10 \\ 
+		SVM.Boot.2 & SVM & bLOO 	& $10$ & FALSE & cost=10 \\ 
+		SVM.Boot.3 & SVM & b$0.632$ & $50$ & FALSE & cost=10 \\ 
+		SVM.Boot.4 & SVM & bLOO 	& $50$ & FALSE & cost=10 \\ 
+	\end{tabular} 
+	\captionsetup{type=table}
+	\caption{
+		The same as Table~\ref{tab:collected} for bootstraped accuracy estimates. 
+		bLOO and b$0.632$ are defined in definitions~\ref{def:bloo} and \ref{def:b0632} respectively.
+		$B$ denotes the number of Bootstrap samples. } 
+	\label{tab:collected_2}
+\end{tcolorbox}
+
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\linewidth]{"art/file13"}
+	\caption{
+		\textbf{Bootstrap--}
+		The power of a permutation test with various test statistics. 
+		The power on the $x$ axis. 
+		Effects are color and shape coded. 
+		The various statistics on the $y$ axis. 
+		Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_2}. 
+		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
+		Simulation details in Appendix~\ref{sec:simulation_details}.
+	} 
+	\label{fig:bootstrap}
+\end{figure}
 
 
 
@@ -458,7 +561,7 @@ This was to be expected, since we already saw in (e.g.) Figure~\ref{fig:simulati
 		The various statistics on the $y$ axis. 
 		Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_3}. 
 		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
-		Simulation details in Appendix~\ref{apx:simulation_details}.
+		Simulation details in Appendix~\ref{sec:simulation_details}.
 	} 
 	\label{fig:highdim}
 \end{figure}
@@ -577,84 +680,6 @@ For independence tests in high dimensional spaces see for example \cite{szekely_
 
 
 
-\subsection{Smoothing Accuracy Estimates}
-\label{sec:bootstrap}
-It may be possible to alleviate the effect of discretization via the cross-validation scheme.
-The discreteness of the accuracy statistic is governed by the number of examples in the union of holdout test sets.
-For V-fold CV, for instance, the accuracy may assume as many values as the sample size. 
-This suggests that the accuracy can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
-An algorithm that samples test sets with replacement is the \emph{leave-one-out bootstrap estimator},  and its derivatives, such as the \emph{0.632 bootstrap}, and \emph{0.632+ bootstrap} \citep[Sec 7.11]{hastie_elements_2003}.
-\begin{definition}[bLOO]
-	\label{def:bloo}
-	The \emph{leave-one-out bootstrap} estimate, bLOO, is the average accuracy of the holdout observations, over all bootstrap samples. 
-	Denote by $\data^b$, a bootstrap sample $b$ of size $n$, sampled with replacement from $\data$. 
-	Also denote by $C^{(i)}$ the index set of bootstrap samples, $b$, not containing observation $i$.
-	The leave-one-out bootstrap estimate, $\accEstim_{\algo}^{bLOO}$,  is defined as:
-	\begin{align}
-	\accEstim_{\algo}^{bLOO}:= \frac 1n \sum_{i=1}^{n} \frac{1}{|C^{(i)}|} \sum_{b \in C^{(i)}} \indicator{\hypFun{\data^b}{x_i}=y_i}.
-	\end{align}
-	where $|A|$ is the cardinality of set $A$.
-	An equivalent formulation, which stresses the Bootstrap nature of the algorithm is the following. 
-	Denoting by $S^{(b)}$ the indexes of observations, $i$, that are \emph{not} in the bootstrap sample $b$ and are not empty, 
-	\begin{align}
-	\accEstim_{\algo}^{bLOO} = \frac 1B \sum_{b=1}^{B} \frac{1}{|S^{(b)}|} \sum_{i \in S^{(b)}} \indicator{\hypFun{\data^b}{x_i}=y_i}.
-	\end{align}
-\end{definition}
-
-\begin{definition}[b$0.632$]
-	\label{def:b0632}
-	The \emph{0.632 bootstrap} accuracy estimate, b$0.632$, is a weighted average of the resubstitution error and the bLOO.
-	Formally:
-	\begin{align}
-	\accEstim_{\algo}^{0.632} := 0.368 \; \accEstim_{\algo}^{Resub}  + 0.632 \; \accEstim_{\algo}^{bLOO}.
-	\end{align}
-\end{definition}
-Simulation results are reported in Figure~\ref{fig:bootstrap} with naming conventions in Table~\ref{tab:collected_2}.
-It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation, but still falls short from the power of location tests. 
-It can also be seen that power increases with the number of bootstrap replications, as was to be expected, since more replications reduce the level of discretization.
-The type of bootstrap, bLOO versus b$0.632$, does not change the power. 
-
-\bigskip
-
-%TODO: change cost in simulation to 0.1
-\begin{tcolorbox}
-	\centering
-	\begin{tabular}{l|c|c|c|c|c}
-		Name & Algorithm & Resampling & B & Z-scored & Parameters\\ 
-		\hline
-		\hline
-		LDA.Boot.1 & LDA & b$0.632$ & $10$ & FALSE &  -- \\ 
-		LDA.Boot.2 & LDA & bLOO 	& $10$ & FALSE &  -- \\ 
-		SVM.Boot.1 & SVM & b$0.632$ & $10$ & FALSE & cost=10 \\ 
-		SVM.Boot.2 & SVM & bLOO 	& $10$ & FALSE & cost=10 \\ 
-		SVM.Boot.3 & SVM & b$0.632$ & $50$ & FALSE & cost=10 \\ 
-		SVM.Boot.4 & SVM & bLOO 	& $50$ & FALSE & cost=10 \\ 
-	\end{tabular} 
-	\captionsetup{type=table}
-	\caption{
-		The same as Table~\ref{tab:collected} for bootstraped accuracy estimates. 
-		bLOO and b$0.632$ are defined in definitions~\ref{def:bloo} and \ref{def:b0632} respectively.
-		$B$ denotes the number of Bootstrap samples. } 
-	\label{tab:collected_2}
-\end{tcolorbox}
-
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=0.7\linewidth]{"art/file13"}
-	\caption{
-		\textbf{Bootstrap--}
-		The power of a permutation test with various test statistics. 
-		The power on the $x$ axis. 
-		Effects are color and shape coded. 
-		The various statistics on the $y$ axis. 
-		Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_2}. 
-		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
-		Simulation details in Appendix~\ref{apx:simulation_details}.
-	} 
-	\label{fig:bootstrap}
-\end{figure}
-
 
 
 
@@ -668,17 +693,17 @@ For these cases, we collect some conclusions and best practices.
 
 
 \paragraph{Regularize.}
-Regularization proves crucial to detection power in low signal to noise regimes: in high dimension and\slash or in the presence of strong correlations. 
+Regularization proves crucial to detection power in low SNR regimes, which may be does to strong correlations or high-dimension.
 We find that the Shrinkage-based Diagonal Linear Discriminant Analysis of \cite{pang_shrinkage-based_2009} is a particularly good performer, but more research is required on this matter. 
-We also conjecture that the power-maximizing regularization is larger than the error-minimizing regularization.
+
 
 \paragraph{Smooth accuracy.}
 Smooth accuracy estimate by cross validating with replacement. The bLOO estimator, in particular, is preferable over V-fold.
 
-We can compound the regularization with the bootstrapping from Section~\ref{sec:bootstrap}, to improve finite sample power of the accuracy tests. 
+We can compound regularization with bootstrapping to improve the power of the accuracy tests. 
 This is done in the \emph{SVM.highdim.2} and \emph{LDA.highdim.4} tests. 
 The latter being one of the very few accuracy tests that achieve the same power as location tests. 
-This is exciting news since it shows how to design powerful new high-powered accuracy tests: by sampling test sets with replacement, and by regularizing the classifiers. 
+This is exciting since it shows how to design powerful new high-powered accuracy tests: by sampling test sets with replacement, and by regularizing the classifiers. 
 
 
 \paragraph{Permute features.} Permuting features, such as in \cite{golland_permutation_2005}, is easier than permuting labels. 
@@ -691,7 +716,6 @@ In low dimensional problems, the discretization is less impactful, and the compu
 There is a fundamental difference between V-folding and resubstitution. The latter should not be thought of as the limit of the former. 
  
 
-\paragraph{Don't z-score.} There is no gain in z-scoring the accuracy scores. Our motivating rational was clearly flawed. %TODO: why?
 
 
 
@@ -720,26 +744,24 @@ This is a very different emphasis from our own.
 
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
-We did not include this test in the battery we compared, but we note the following: 
-(a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. 
-It may probably be improved by regulirizing and resampling with replacement, before the application of \cite{olivetti_induction_2012}'s independence test. 
-(b) In contrast with the underlying motivation of \cite{olivetti_induction_2012}'s independence test, we did not find that balancing the data folds affects the power of the test. 
+We did not include this test in the battery we compared, but we note that the independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. 
+It may thus be improved by regularizing and resampling with replacement, before the application of \cite{olivetti_induction_2012}'s test statistic. 
 
 
 \cite{golland_permutation_2003} and \cite{golland_permutation_2005} study accuracy tests using simulation, neuroimaging data, genetic data, and analytically.
 Their analytic results formalize our intuition from Section~\ref{sec:introduction} on the effect of concentration of the accuracy statistic:
 The finite Vapnik–Chervonenkis dimension requirement \citep[Sec 4.3]{golland_permutation_2005} prevents the permutation p-value from (asymptotically) concentrating near $1$. 
-Like ourselves, they also find that the power increases with the size of the test set. 
+Like us, they find that the power increases with the size of the test set. 
 This is seen in Fig.4 of \citet{golland_permutation_2005}, where the size of the test-set, $K$, governs the discretization. 
 Since they permute features, not labels, then all their permutation samples are balanced, and there is no issue of refolding. 
 
 \cite{golland_permutation_2005} simulate the power of accuracy tests by sampling from a Gaussian mixture family of models, and not from a location family as our own simulations. 
-Under their model 
+Under their model (with some abuse of notation)
 $$(x_i|y_i=1) \sim p \gauss{\mu_1,I}+ (1-p) \gauss{\mu_2,I}$$ 
 and 
-$$(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}.$$
+$$(x_i|y_i=0) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}.$$
 Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
-We now perform the same simulation as \cite{golland_permutation_2005}, after parameterizing $p$ so that $p=0$ corresponds to the null model, and in the same dimensionality as our previous simulations.
+We now perform the same simulation as \cite{golland_permutation_2005}, after re-parameterizing so that $p=0$ corresponds to the null model, and in the same dimensionality as our previous simulations.
 We find that also in this mixture class of models a location test has more power than an accuracy test (Figure~\ref{fig:golland}).
 
 
@@ -747,7 +769,8 @@ We find that also in this mixture class of models a location test has more power
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/file12"}
-	  \caption{\textbf{Mixture--} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
+	  \caption{TODO: verify!
+	  	\textbf{Mixture--} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
 	  The effect, $p$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:golland}
 \end{figure}
